--- a/style.css
+++ b/style.css
@@ -42,7 +42,7 @@ section {
     margin: 0 auto;
 }
 
-
+/* posicionamento para a imagem à direita */
 .img-inicio {
     position: absolute;
     right: 0;
@@ -83,7 +83,8 @@ section {
     background: url('img/flor.png') top right no-repeat,
         url('img/flor-esquerda.png') bottom left no-repeat;
     background-size: 180px 180px;
-   
+    /* Ajuste o tamanho conforme necessário */
+}
 
 #tropicalia .container {
     display: flex;
@@ -91,7 +92,7 @@ section {
     justify-content: center;
     position: relative;
     z-index: 1;
-   
+    /* Garante que o conteúdo fica acima das imagens do background */
 }
 
 
@@ -116,15 +117,18 @@ h2 {
     background-image: url('img/4965007.jpg');
     background-size: cover;
     padding: 4rem 0;
-  
+    /* Espaçamento interno para a seção de contato */
 
 }
 
 .formulario {
     background-color: #ffffff;
     padding: 2rem;
+    /* Espaçamento interno dentro do formulário */
     border-radius: 10px;
+    /* Borda arredondada para o formulário */
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    /* Sombra suave para destacar o formulário */
     font-weight: bold;
 }
 
